refactor(security): Replace JwtAuthFilter and update SecurityConfig
- Replaces the existing JwtAuthFilter with a new JwtAuthenticationFilter to support the updated session management flow.
- Updates SecurityConfig and TestSecurityConfig to use the new filter and adjust endpoint permissions.